Scorecontroller added & Tournament controller updated
