# src/DavesDartsClub.WebApi/Controllers/TournamentController.TournamentSearchRequest.cs
@@ -1,0 +1,10 @@
+﻿namespace DavesDartsClub.WebApi.Controllers;
+
+public partial class TournamentController
+{
+    public class TournamentSearchRequest
+    {
+        public string TournamentName { get; set; } = string.Empty;
+    }
+
+}
