# src/DavesDartsClub.WebApi/Controllers/TournamentController.cs
@@ -1,4 +1,6 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using DavesDartsClub.Application;
+using DavesDartsClub.Domain;
+using Microsoft.AspNetCore.Mvc;
 using System.Net;
 using System.Net.Http;
 
@@ -6,33 +8,14 @@ namespace DavesDartsClub.WebApi.Controllers;
 
 [ApiController]
 [Route("[controller]")]
-public class TournamentController : ControllerBase
+public partial class TournamentController : ControllerBase
 {
-    // Original post...
+    private readonly ITournamentService _tournamentService;
 
-    //[HttpPost(Name = "Create Tournament")]
-    //[ProducesResponseType(((int)HttpStatusCode.Created))]
-    //public ActionResult<Guid> Post(TournamentRequest tournamentRequest)
-    //{
-    //    var id = Guid.NewGuid();
-    //    return CreatedAtRoute(nameof(Get), id);
-    //}
-
-    // Original Get...
-
-    //[HttpGet(Name = "Get Tournament")]
-    //[ProducesResponseType(((int)HttpStatusCode.OK))]
-    //[ProducesResponseType(((int)HttpStatusCode.NotFound))]
-    //public ActionResult<TournamentResponse> Get(Guid tournamentId)
-    //{
-    //    var result = new TournamentResponse()
-    //    {
-    //        TournamentId = tournamentId,
-    //        TournamentName = "Darts World Cup"
-    //    };
-
-    //    return Ok(result);
-    //}
+    public TournamentController(ITournamentService tournamentService)
+    {
+        _tournamentService = tournamentService;
+    }
 
     [HttpPost(Name = nameof(CreateTournament))]
     [ProducesResponseType(((int)HttpStatusCode.Created))]
@@ -47,21 +30,29 @@ public class TournamentController : ControllerBase
     [ProducesResponseType(((int)HttpStatusCode.NotFound))]
     public ActionResult<TournamentResponse> GetTournamentById(Guid tournamentId)
     {
+        var tournament = _tournamentService.GetTournamentById(tournamentId);
         var result = new TournamentResponse()
         {
-            TournamentId = tournamentId,
-            TournamentName = "Champions League"
+            TournamentId = tournament.TournamentId,
+            TournamentName = tournament.TournamentName
         };
 
         return Ok(result);
     }
 
-    [HttpGet(Name = nameof(GetTournamentByName))]
+    [HttpGet(Name = nameof(GetTournamentSearch))]
     [ProducesResponseType(((int)HttpStatusCode.OK))]
-    public ActionResult<IEnumerable<TournamentResponse>> GetTournamentByName([FromQuery] string name)
+    public ActionResult<IEnumerable<TournamentResponse>> GetTournamentSearch([FromBody] TournamentSearchRequest tournamentSearchRequest)
     {
+        var tournament = _tournamentService.GetTournamentByName(tournamentSearchRequest.TournamentName);
+
         var result = new List<TournamentResponse>
         {
+            new TournamentResponse()
+            {
+                 TournamentId = tournament.TournamentId,
+                 TournamentName = tournament.TournamentName
+            }
 
         };
 
@@ -82,5 +73,5 @@ public class TournamentController : ControllerBase
 
         return NoContent();
     }
-        
+
 }
