# src/DavesDartsClub.WebApi/swagger/DavesDartsClub.WebApi.json
@@ -332,6 +332,48 @@
         }
       }
     },
+    "/Score": {
+      "get": {
+        "tags": [
+          "Score"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Score"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "string"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "string"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "string"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/Tournament": {
       "post": {
         "tags": [
@@ -388,16 +430,27 @@
         "tags": [
           "Tournament"
         ],
-        "operationId": "GetTournamentByName",
-        "parameters": [
-          {
-            "name": "name",
-            "in": "query",
-            "schema": {
-              "type": "string"
+        "operationId": "GetTournamentSearch",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TournamentSearchRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TournamentSearchRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/TournamentSearchRequest"
+              }
             }
-          }
-        ],
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "OK",
@@ -637,6 +690,14 @@
             "type": "string"
           }
         }
+      },
+      "TournamentSearchRequest": {
+        "type": "object",
+        "properties": {
+          "tournamentName": {
+            "type": "string"
+          }
+        }
       }
     }
   },
@@ -646,6 +707,9 @@
     },
     {
       "name": "Player"
+    },
+    {
+      "name": "Score"
     },
     {
       "name": "Tournament"
